--- a/mytemplates/polls/detail.html
+++ b/mytemplates/polls/detail.html
@@ -1,1 +1,6 @@
-This are the details for poll "{{ poll }}".
+<h1>{{ poll.question }}</h1>
+<ul>
+{% for choice in poll.choice_set.all %}
+    <li>{{ choice.choice }}</li>
+{% endfor %}
+</ul>
